--- a/beer/src/index.css
+++ b/beer/src/index.css
@@ -11,3 +11,30 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.Home {
+  display: flex;
+  justify-content: space-between;
+  
+  color: white;background-color: red;
+  padding: 15px;
+  font-size: 2em;
+ }
+
+.Home a {
+  color: white;
+  text-decoration: none;
+}
+  .nav {
+  display: flex;
+  justify-content: flex-end;
+  background-color: red;
+  color: white;
+  padding: 15px;
+  font-size: 2em;
+} 
+
+.nav a {
+  color: white;
+  text-decoration: none;
+} 
