data good so far

--- a/beer/src/index.css
+++ b/beer/src/index.css
@@ -12,29 +12,18 @@ code {
     monospace;
 }
 
-.Home {
+
+.nav {
   display: flex;
   justify-content: space-between;
-  
-  color: white;background-color: red;
+  background-color: black;
+  color: white;
   padding: 15px;
   font-size: 2em;
- }
-
-.Home a {
-  color: white;
-  text-decoration: none;
 }
-  .nav {
-  display: flex;
-  justify-content: flex-end;
-  background-color: red;
-  color: white;
-  padding: 15px;
-  font-size: 2em;
-} 
 
 .nav a {
   color: white;
   text-decoration: none;
-} 
+}
+
