--- a/beer/src/index.css
+++ b/beer/src/index.css
@@ -17,7 +17,6 @@ code {
 .nav {
   display: flex;
   justify-content: space-between;
-  background-color: black;
   color: white;
   padding: 15px;
   font-size: 2em;
@@ -28,11 +27,12 @@ code {
   text-decoration: none;
 }
 
-body {
+ body {
   width: 100%;
-  height: 100vh;
-  background: url("https://res.cloudinary.com/ds7w3ysag/image/upload/v1610845421/mathew-macquarrie-u6OnpbMuZAs-unsplash_g3aqnx.jpg") no-repeat center ;
-  background-size: contain;
-  position: absolute;
+  height: 100%;
+  background: url("https://res.cloudinary.com/ds7w3ysag/image/upload/v1610943962/mudassir-ali-NZ0HxSy55hY-unsplash_prm98i.jpg") no-repeat center center scroll;
+  background-size: cover;
+  position: relative;
+  text-align: center;
   }
   
