--- a/beer/src/index.scss
+++ b/beer/src/index.scss
@@ -21,11 +21,11 @@ code {
   padding: 15px;
   font-size: 2em;
 }
-
-.nav a {
+  a {
   color: white;
   text-decoration: none;
 }
+
 
  body {
   width: 100%;
