--- a/src/App.scss
+++ b/src/App.scss
@@ -14,12 +14,18 @@
 }
 
 
-.card {
+.card-section {
   display: flex;
   justify-content: center;
-  flex-direction: column;
-  color: black;
-  float:left;
-  position:absolute;
+  align-items: center;
+
 }
 
+.card-text {
+ color:blue;
+ 
+}
+
+.card-body {
+  background-color: black;
+}
