--- a/src/App.scss
+++ b/src/App.scss
@@ -59,28 +59,25 @@
   background: #bdc3c7;
 }
 
-/*
-Sidebar wrapper styles
-Note: Beware of modifying this element as it can break the animations - you should not need to touch it in most cases
-*/
+
 .bm-menu-wrap {
   position: fixed;
   height: 100%;
 }
 
-/* General sidebar styles */
+
 .bm-menu {
   background: #373a47;
   padding: 2.5em 1.5em 0;
   font-size: 1.15em;
 }
 
-/* Morph shape necessary with bubble or elastic */
+
 .bm-morph-shape {
   fill: #373a47;
 }
 
-/* Wrapper for item list */
+
 .bm-item-list {
   color: #b8b7ad;
   padding: 0.8em;
@@ -100,20 +97,29 @@ Note: Beware of modifying this element as it can break the animations - you shou
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: url("");
-}
+  }
 }
 @media screen and (min-width:767px) {
+.section-cards {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-.section-home {
-display: flex;
-justify-content: center;
-align-items: center;
-background-image: url("https://res.cloudinary.com/ds7w3ysag/image/upload/v1611258832/james-wheeler-ZOA-cqKuJAA-unsplash_etybnl.jpg");
-background-repeat: no-repeat;
-}  
-
-
-
+  
+}
+.cards-wrapper {
+  display: flex;
+  flex-direction: row;
+margin-left: 20px;
 
 }
+.card {
+  min-width: 200px;
+  margin: 5px;
+}
+
+}
+
