--- a/src/App.scss
+++ b/src/App.scss
@@ -102,23 +102,26 @@
 @media screen and (min-width:767px) {
 .section-cards {
   width: 100%;
-  height: 100%;
-  margin: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
+  height: 200px;
+  display: block;
+  overflow-x: scroll;
   
 }
 .cards-wrapper {
   display: flex;
   flex-direction: row;
 margin-left: 20px;
-
+overflow-x: auto;
+}
+.cards-wrapper::-webkit-scrollbar {
+  width: 0;
 }
 .card {
-  min-width: 200px;
+  width:200px;
+  height: 200px;
+  line-height: 200px;
   margin: 5px;
+  
 }
 
 }
