--- a/src/App.scss
+++ b/src/App.scss
@@ -100,12 +100,77 @@
   }
 }
 @media screen and (min-width:767px) {
+  .bm-burger-button {
+    position: fixed;
+    width: 36px;
+    height: 30px;
+    left: 36px;
+    top: 36px;
+  }
+  
+  
+  .bm-burger-bars {
+    background: #373a47;
+  }
+  
+  
+  .bm-burger-bars-hover {
+    background: #a90000;
+  }
+  
+  
+  .bm-cross-button {
+    height: 24px;
+    width: 24px;
+  }
+  
+  
+  .bm-cross {
+    background: #bdc3c7;
+  }
+  
+  
+  .bm-menu-wrap {
+    position: fixed;
+    height: 100%;
+  }
+  
+  
+  .bm-menu {
+    background: #373a47;
+    padding: 2.5em 1.5em 0;
+    font-size: 1.15em;
+  }
+  
+  
+  .bm-morph-shape {
+    fill: #373a47;
+  }
+  
+  
+  .bm-item-list {
+    color: #b8b7ad;
+    padding: 0.8em;
+  }
+  
+  
+  .bm-item {
+    display: inline-block;
+  }
+  
+  
+  .bm-overlay {
+    background: rgba(0, 0, 0, 0.3);
+  }
+body {
+  background-image: url("https://res.cloudinary.com/ds7w3ysag/image/upload/v1611258832/james-wheeler-ZOA-cqKuJAA-unsplash_etybnl.jpg");
+}  
 .section-cards {
   width: 100%;
   height: 200px;
   display: block;
   overflow-x: scroll;
-  
+  margin-top: 480px;
 }
 .cards-wrapper {
   display: flex;
