--- a/src/App.scss
+++ b/src/App.scss
@@ -193,9 +193,9 @@ overflow-x: auto;
 .card {
   width:200px;
   height: 200px;
-  line-height: 200px;
-  margin: 5px;
-  
+  margin: 5px;  
+  background-image: url("https://res.cloudinary.com/ds7w3ysag/image/upload/c_scale,h_200,w_200/v1611339693/joshua-glass-0N0KfIZ98a0-unsplash_lmx4me.jpg");
+  background-position: center;
 }
 
 
